<resources>
    <string name="app_name">TallerFirebaseMaps</string>
    <string name="Iniciar">Iniiciar</string>
    <string name="email">Email (example@email.com)</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="nombre">Nombre</string>
    <string name="apellido">Apellido</string>
    <string name="tomarfoto">Tomar foto</string>
    <string name="seleccionargaleria">Seleccionar galeria</string>
    <string name="title_activity_home">Map</string>
    <string name="lblEmail">Email: </string>
    <string name="lblNombre">Nombre: </string>
    <string name="lblApellido">Apellido: </string>
    <string name="Atras">Atras</string>
    <string name="Ver_rutas">Ver rutas</string>
    <string name="Volver">Volver</string>
    <string name="Cancelar">Cancelar</string>

</resources>
