<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javeriana.ricardo.tallerfirebasemaps.SignupActivity">

    <EditText
        android:id="@+id/etxtNombre"
        android:layout_width="345dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="18dp"
        android:hint="@string/nombre"
        android:inputType="textPersonName"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.002" />

    <EditText
        android:id="@+id/etxtApellido"
        android:layout_width="345dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/apellido"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etxtNombre"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/etxtEmail"
        android:layout_width="345dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etxtApellido"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.003" />

    <EditText
        android:id="@+id/etxtPassword"
        android:layout_width="345dp"
        android:layout_height="35dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/etxtEmail"
        app:layout_constraintBottom_toBottomOf="@+id/btnRegistrar"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.008" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/signup"
        android:textColor="@android:color/holo_blue_dark"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imgFoto"
        android:layout_width="112dp"
        android:layout_height="107dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtPassword"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <Button
        android:id="@+id/btnTomarFoto"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="34dp"
        android:layout_marginTop="8dp"
        android:text="@string/tomarfoto"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFoto"
        app:layout_constraintVertical_bias="0.126"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.031" />

    <Button
        android:id="@+id/btnSeleccionarFoto"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="8dp"
        android:text="@string/seleccionargaleria"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFoto"
        app:layout_constraintVertical_bias="0.126"
        app:layout_constraintLeft_toRightOf="@+id/btnTomarFoto"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="1.0" />

    <Button
        android:id="@+id/btnRegistrar"
        android:layout_width="150dp"
        android:layout_height="40dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/signup"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgFoto"
        app:layout_constraintVertical_bias="0.78" />

</android.support.constraint.ConstraintLayout>
