<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javeriana.ricardo.tallerfirebasemaps.LoginActivity">

    <ImageView
        android:layout_width="111dp"
        android:layout_height="115dp"
        android:src="@drawable/firebase"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        app:layout_constraintVertical_bias="0.0"
        android:id="@+id/imageView"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/etxtUser"
        android:hint="@string/email"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="32dp"
        android:layout_marginTop="35dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginLeft="32dp"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        tools:layout_constraintLeft_creator="1" />

    <EditText
        android:id="@+id/etxtPass"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginBottom="231dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.562"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="1.0"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        tools:layout_constraintLeft_creator="1" />

    <Button
        android:id="@+id/btnSignup"
        android:text="@string/signup"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginBottom="164dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtPass"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="37dp"
        app:layout_constraintVertical_bias="0.789"
        android:layout_marginRight="37dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@+id/btnLogin"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.808" />

    <Button
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:layout_width="130dp"
        android:layout_height="40dp"
        android:layout_marginBottom="164dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxtPass"
        android:layout_marginStart="33dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.937"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0" />


</android.support.constraint.ConstraintLayout>
