<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.javeriana.ricardo.tallerfirebasemaps.LoginActivity"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/lnLayout1"
        android:layout_width="350dp"
        android:layout_height="28dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/lblEmail"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.25"
            android:text="@string/lblEmail"/>

        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:text=""/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnLayout2"
        android:layout_width="350dp"
        android:layout_height="28dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp">

        <TextView
            android:id="@+id/lblNombre"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="0.25"
            android:text="@string/lblNombre" />

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:text="" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/lnLayout3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAyuda"
                android:layout_width="78dp"
                android:layout_height="33dp"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:text="Avanzada"
                android:textSize="10sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/etxtDireccion"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintHorizontal_bias="1.0">

            </Button>


            <EditText
                android:id="@+id/etxtDireccion"
                android:layout_width="254dp"
                android:layout_height="42dp"
                android:hint="Ingrese dirección"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginLeft="0dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintVertical_bias="0.0" />


        </android.support.constraint.ConstraintLayout>
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btnAtras"
                android:layout_width="88dp"
                android:layout_height="48dp"

                android:text="@string/Atras"
                android:textSize="10sp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                android:layout_marginRight="8dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginEnd="8dp" />

            <fragment
                android:id="@+id/place_autocomplete_fragment"
                android:name="com.google.android.gms.location.places.ui.PlaceAutocompleteFragment"
                android:layout_width="251dp"
                android:layout_height="31dp"

                android:layout_alignTop="@+id/btnAtras"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintRight_toLeftOf="@+id/btnAtras"
                android:layout_marginRight="8dp"
                android:layout_marginLeft="8dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp" />

        </android.support.constraint.ConstraintLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <fragment xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:map="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/map"
                android:name="com.google.android.gms.maps.SupportMapFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignParentTop="true"
                android:layout_alignParentStart="true" />

            <ImageView
                android:id="@+id/imgMLocation"
                android:layout_width="45dp"
                android:layout_height="45dp"
                app:srcCompat="@drawable/move_location"
                android:layout_alignParentTop="true"
                android:layout_alignParentRight="true"
                />

            <TextView
                android:id="@+id/txtDistancia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="30dp"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/txtTiempo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="15dp"
                android:text=""
                android:textColor="@color/colorAccent"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btnRutas"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="@string/Ver_rutas"
                android:textSize="10sp"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_margin="8dp"/>

            <TextView
                android:id="@+id/rutaInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Rutas"
                android:textSize="30sp"
                android:textColor="@color/colorAccent"
                android:layout_centerHorizontal="true"
                />
            <LinearLayout
                android:paddingTop="25dp"
                android:layout_width="250dp"
                android:layout_height="145dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:id="@+id/linearLayout3">
                <ListView
                    android:layout_marginTop="15dp"
                    android:id="@+id/listRutas"
                    android:layout_width="match_parent"
                    android:layout_height="117dp"
                    android:background="@android:color/holo_orange_light"/>
            </LinearLayout>

            <Button
                android:id="@+id/btnIniciar"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="@string/Iniciar"
                android:textSize="10sp"
                android:layout_alignTop="@+id/btnCancelar"
                android:layout_alignStart="@+id/btnRutas"
                android:layout_marginTop="12dp" />
            <Button
                android:id="@+id/btnLstVolver"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="@string/Volver"
                android:textSize="10sp"
                android:layout_below="@+id/btnIniciar"
                android:layout_alignStart="@+id/btnCancelar" />
            <Button
                android:id="@+id/btnCancelar"
                android:layout_width="70dp"
                android:layout_height="30dp"
                android:text="@string/Cancelar"
                android:textSize="10sp"
                android:layout_below="@+id/linearLayout3"
                android:layout_alignStart="@+id/rutaInfo"
                android:layout_marginTop="12dp" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
